working authorization + access to CurrentUser

--- a/backend/Backend.WebApp/appsettings.json
+++ b/backend/Backend.WebApp/appsettings.json
@@ -2,15 +2,17 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      //"Microsoft.AspNetCore.Authentication": "Information",
+      //"Microsoft.AspNetCore.Authorization": "Information"
     }
   },
   "connectionStrings": {
     "defaultConnection": "Server=tcp:wokout-buddy.database.windows.net,1433;Initial Catalog=WorkoutBuddyDB;Persist Security Info=False;User ID=jovialjoker;Password=Copernic@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "JWT": {
-    "ValidAudience": "http://localhost:7132",
-    "ValidIssuer": "http://localhost:3000",
+    "ValidAudience": "https://localhost:7132",
+    "ValidIssuer": "https://localhost:3000",
     "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   },
   "AllowedHosts": "*"
