--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-router": "^6.6.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.7.0",
     "redux": "^4.2.0",
     "redux-saga": "^1.2.2"
   },
