--- a/frontend_angular/AdminApp/package.json
+++ b/frontend_angular/AdminApp/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@ngrx/effects": "^15.2.1",
+    "@ngrx/store": "^15.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
