changes for presentation

--- a/backend/Backend.WebApp/appsettings.json
+++ b/backend/Backend.WebApp/appsettings.json
@@ -8,7 +8,7 @@
     }
   },
   "connectionStrings": {
-    "defaultConnection": "Server=tcp:wokout-buddy.database.windows.net,1433;Initial Catalog=WorkoutBuddyDB;Persist Security Info=False;User ID=jovialjoker;Password=Copernic@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "defaultConnection": "Server=tcp:wbfea.database.windows.net,1433;Initial Catalog=workoutBuddy;Persist Security Info=False;User ID=wbAdmin;Password=Copernic@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "JWT": {
     "ValidAudience": "https://localhost:7132",
